--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,9 +2,15 @@
     "version": 2,
     "builds": [
         {
-            "src": "*.js","use": "@vercel/node"
-        }],
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
+        {
+            "src": "/api/v1/(.*)",
+            "dest": "/api/v1/$1"
+        },
         {
             "src": "/(.*)",
             "dest": "/"
