--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,19 +1,8 @@
 {
-    "version": 2,
-    "builds": [
+    "REWRITES": [
         {
-            "src": "Server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/v1/(.*)",
-            "dest": "/api/v1/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/"
+            "source": "/(.*)",
+            "destination": "/"
         }
     ]
 }
