--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,8 +1,8 @@
 {
     "REWRITES": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "source": "/api/(.*)",
+            "destination": "/api/v1/$1"
         }
     ]
 }
